# TantrixTwist

./: CMakeLists.txt
headers/: ColorConf.h  GlobalTiles.h  PermutationEngine.h  Tile.h  TileConfs.h
sources/: ColorConf.cpp  GlobalTiles.cpp  PermutationEngine.cpp  Tile.cpp  main.cpp
